syntax = "proto2";

import "flux_options.proto";
import "trade_core.proto";

package market_data;

message PxRange {
    optional float px_low = 1 [(FluxFldTitle) = "low"];
    optional float px_high = 2 [(FluxFldTitle) = "high"];
}

message PremiumRange {
    optional float premium_low = 1 [(FluxFldTitle) = "low"];
    optional float premium_high = 2 [(FluxFldTitle) = "high"];
}

message PremiumChangeRange {
    optional float premium_change_low = 1 [(FluxFldTitle) = "low"];
    optional float premium_change_high = 2 [(FluxFldTitle) = "high"];
}

message InventoryRange {
    optional float indicative_low = 1;
    optional float indicative_high = 2;
    optional float pth_low = 3;
    optional float pth_high = 4;
    optional float locate_low = 5;
    optional float locate_high = 6;
    optional float sod_low = 7;
    optional float sod_high = 8;
}

message OptimizerCriteria {
    optional PositionType pos_type = 1 [(FluxFldHelp) = "pos_type to optimize - if not found, no optimization available for that sec id"];
    optional int64 min_notional = 2 [(FluxFldHelp) = "min required notional (at better cost) to match"];
}

message Inventory {
    optional bool indicative = 1;
    optional bool pth = 2;
    optional bool locate = 3;
    optional bool sod = 4;
    optional bool any = 5;
}

message DashLeg {
    optional string exch_id = 1 [(FluxFldServerPopulate) = true];
    required Security sec = 2 [(FluxFldElaborateTitle) = true];
    optional string company = 3 [(FluxFldServerPopulate) = true];
    optional float last_px = 4;
    optional float last_px_change = 5 [(FluxFldNumberFormat) = "%"];  // Against yesterday close px
    optional float market_notional = 6 [(FluxFldNumberFormat) = "%"];  // market current total last trade notional
    optional float consumed_notional = 7 [(FluxFldNumberFormat) = "%"];  // all mstrat total cb notional (filled)
}

message InventorySummary {
    required int64 qty = 1;
    optional float avg_rate = 2 [(FluxFldNumberFormat) = "%"];
    optional float usd_notional = 3 [(FluxFldDisplayType) = "int"];
}